--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/react-quiz.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack",
-    "develop": "./node_modules/.bin/webpack --watch --verbose & npm run server",
+    "develop": "./node_modules/.bin/webpack --watch --verbose -d & npm run server",
     "lint": "./node_modules/.bin/eslint ./src; true;",
     "server": "./node_modules/.bin/browser-sync start --config='./bs-config.js'"
   },
